# team1_worknest

./: README.md  community.db  project_manager.db  pyproject.toml
src/worknest/: app.py  cust_app.py  db_setup.py  models.py  path_helper.py  practice_app.py
src/worknest/models/: issue.py
src/worknest/repository/: issue.py  tasks.html
src/worknest/routes/: app.py  issue_routes.py  task.py
src/worknest/templates/: base.html  create_task.html  cs_add.html  cs_detail_view.html  cs_main.html  cs_update.html  customer_list.html  dashboard.html  delete.html  detail.html  edit_customer.html  edit_task.html  home.html  hr_add.html  hr_edit.html  hr_list.html  index.html  inquiries.html  inquiries_list.html  inquiry_detail.html  login.html  main.html  project_detail.html  project_list.html  register.html  useinquiries.html  useinquiries_list.html  write.html
src/worknest/templates/issue/: detail.html  edit.html  form.html  list.html
