[project]
name = "worknest"
version = "0.1.0"
description = ""
authors = [
    {name = "mcube35",email = "mcube3575@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pymongo (>=4.13.2,<5.0.0)"
    
]

[tool.poetry]
packages = [{include = "worknest", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
